# k8s-multicluster-mcp

./: .dockerignore  .flake8  .gitignore  .isort.cfg  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  RELEASE_CHECKLIST.md  TROUBLESHOOTING.md  app.py  cursor-config-uv.json  cursor-config.json  generate-all-deeplinks.js  local-config.json  pyproject.toml  requirements.txt  smithery.yaml  task.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker-build-publish.yml  docker-publish.yml  publish.yml  release.yml  tests.yaml  tests.yml
docs/: API_REFERENCE.md
examples/: claude-desktop-config.json
src/: main.py
src/tools/: __init__.py  api_discovery.py  cluster_health.py  contexts.py  delete_resource.py  describe.py  diagnosis.py  events.py  job_management.py  metrics.py  namespace_management.py  namespaces.py  node_management.py  nodes.py  pod_operations.py  pods.py  rbac.py  resource_management.py  resources.py  rollouts.py  scaling.py  secret_configmap.py  storage_network.py  workload_management.py
src/utils/: k8s_client.py  pluralize.py
tests/: __init__.py  test_main.py  test_package_structure.py
