[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "k8s-multicluster-mcp"
version = "1.1.0"
description = "An MCP (Model Context Protocol) server application for Kubernetes operations, providing a standardized API to interact with multiple Kubernetes clusters simultaneously using multiple kubeconfig files."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "razvanmacovei"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "fastmcp",
    "kubernetes>=28.1.0",
    "httpx",
    "pydantic",
    "pyyaml",
    "fastapi",
    "uvicorn",
    "json-patch",
    "jsonpatch",
]

[project.urls]
Homepage = "https://github.com/razvanmacovei/k8s_multicluster_mcp"
Repository = "https://github.com/razvanmacovei/k8s_multicluster_mcp"
Issues = "https://github.com/razvanmacovei/k8s_multicluster_mcp/issues"

[project.scripts]
k8s-multicluster-mcp = "src.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]
exclude = [
    "*.pyc",
    "__pycache__",
    ".git",
    ".venv",
    "dist",
    "build",
]

[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120