[tool.uv]
name = "k8s-multicluster-mcp"
version = "2.0.0"
description = "An MCP (Model Context Protocol) server for managing multiple Kubernetes clusters. Provides 60+ tools for cluster operations, monitoring, RBAC, storage, networking, and more."
authors = ["razvanmacovei"]

[tool.uv.dependencies]
python = "^3.11"
fastmcp = "*"
kubernetes = ">=28.1.0"
httpx = "*"
pydantic = "*"
pyyaml = "*"
jsonpatch = "*"

[build-system]
requires = ["uv-core>=1.0.0"]
build-backend = "uv.core.masonry.api"