[project]
name = "k8s-multicluster-mcp"
version = "2.0.0"
description = "An MCP (Model Context Protocol) server for managing multiple Kubernetes clusters. Provides 60+ tools for cluster operations, monitoring, RBAC, storage, networking, and more."
authors = [{name = "razvanmacovei"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "fastmcp",
    "kubernetes>=28.1.0",
    "httpx",
    "pydantic",
    "pyyaml",
    "jsonpatch",
]

[project.scripts]
k8s-multicluster-mcp = "app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.wheel.force-include]
"app.py" = "app.py"
